--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practice</title>
 </head>
 <body>
     
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam error doloremque distinctio, illum, quia molestiae consectetur vel rem officia aut esse omnis deserunt itaque quisquam temporibus ab adipisci dolor nobis?</p>
+
+
+
 </body>
 </html>
